--- a/controller/mantis controller sdcard/BACKUP/FPV-bumblebee.yml
+++ b/controller/mantis controller sdcard/BACKUP/FPV-bumblebee.yml
@@ -1,4 +1,4 @@
-semver: 2.10.0
+semver: 2.11.3
 header: 
    name: "FPV"
 timers: 
@@ -28,124 +28,141 @@ throttleReversed: 0
 enableCustomThrottleWarning: 0
 disableTelemetryWarning: 0
 showInstanceIds: 0
+checklistInteractive: 0
 customThrottleWarningPosition: 0
 beepANACenter: 0
 mixData: 
  -
-   weight: 100
    destCh: 0
-   srcRaw: I3
+   srcRaw: "I3"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 0
-   srcRaw: I4
+   srcRaw: "I4"
    carryTrim: 0
    mixWarn: 0
    mltpx: MUL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: "MUL"
  -
-   weight: 0
    destCh: 0
-   srcRaw: I3
+   srcRaw: "I3"
    carryTrim: 0
    mixWarn: 0
    mltpx: REPL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 0
    offset: 0
    swtch: "L5"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: "LIM"
  -
-   weight: 100
    destCh: 1
-   srcRaw: I1
+   srcRaw: "I1"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 1
-   srcRaw: I4
+   srcRaw: "I4"
    carryTrim: 0
    mixWarn: 0
    mltpx: MUL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: "MUL"
  -
-   weight: 0
    destCh: 1
-   srcRaw: I1
+   srcRaw: "I1"
    carryTrim: 0
    mixWarn: 0
    mltpx: REPL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 0
    offset: 0
    swtch: "L5"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: "LIM"
  -
-   weight: 100
    destCh: 2
-   srcRaw: I2
+   srcRaw: "I2"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 2
-   srcRaw: I2
+   srcRaw: "I2"
    carryTrim: 0
    mixWarn: 0
    mltpx: REPL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "L4"
-   flightModes: 000000000
    curve: 
       type: 3
       value: 1
@@ -155,15 +172,17 @@ mixData:
    speedDown: 0
    name: "LIM1"
  -
-   weight: 100
    destCh: 2
-   srcRaw: I2
+   srcRaw: "I2"
    carryTrim: 0
    mixWarn: 0
    mltpx: REPL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "L5"
-   flightModes: 000000000
    curve: 
       type: 3
       value: 2
@@ -173,135 +192,153 @@ mixData:
    speedDown: 0
    name: "LIM2"
  -
-   weight: 100
    destCh: 3
-   srcRaw: I0
+   srcRaw: "I0"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 3
-   srcRaw: I4
+   srcRaw: "I4"
    carryTrim: 0
    mixWarn: 0
    mltpx: MUL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: "MUL"
  -
-   weight: 100
    destCh: 4
-   srcRaw: SA
+   srcRaw: "I5"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 5
-   srcRaw: SB
+   srcRaw: "I6"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
-   offset: 0
-   swtch: "NONE"
+   delayPrec: 0
+   speedPrec: 0
    flightModes: 000000000
-   delayUp: 0
-   delayDown: 0
-   speedUp: 0
-   speedDown: 0
-   name: ""
- -
    weight: 100
-   destCh: 6
-   srcRaw: SC
-   carryTrim: 0
-   mixWarn: 0
-   mltpx: ADD
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 0
    destCh: 6
-   srcRaw: SC
+   srcRaw: "I7"
+   carryTrim: 0
+   mixWarn: 0
+   mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   delayUp: 0
+   delayDown: 0
+   speedUp: 0
+   speedDown: 0
+   name: ""
+ -
+   destCh: 6
+   srcRaw: "I7"
    carryTrim: 1
    mixWarn: 0
    mltpx: REPL
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 0
    offset: -100
    swtch: "L5"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: "LIMIT2"
  -
-   weight: 100
    destCh: 7
-   srcRaw: SD
+   srcRaw: "I8"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 8
-   srcRaw: SE
+   srcRaw: "I9"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
    speedDown: 0
    name: ""
  -
-   weight: 100
    destCh: 9
-   srcRaw: P1
+   srcRaw: "I4"
    carryTrim: 0
    mixWarn: 0
    mltpx: ADD
+   delayPrec: 0
+   speedPrec: 0
+   flightModes: 000000000
+   weight: 100
    offset: 0
    swtch: "NONE"
-   flightModes: 000000000
    delayUp: 0
    delayDown: 0
    speedUp: 0
@@ -349,72 +386,156 @@ expoData:
    mode: 3
    scale: 0
    trimSource: 1
-   srcRaw: Rud
+   srcRaw: "Rud"
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 45
    chn: 0
-   swtch: "NONE"
    flightModes: 000000000
-   weight: 100
    name: ""
-   offset: 0
-   curve: 
-      type: 1
-      value: 45
  -
    mode: 3
    scale: 0
    trimSource: 0
-   srcRaw: Ele
+   srcRaw: "Ele"
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 45
    chn: 1
-   swtch: "NONE"
    flightModes: 000000000
-   weight: 100
    name: ""
-   offset: 0
-   curve: 
-      type: 1
-      value: 45
  -
    mode: 3
    scale: 0
    trimSource: 0
-   srcRaw: Thr
-   chn: 2
-   swtch: "NONE"
-   flightModes: 000000000
+   srcRaw: "Thr"
    weight: 100
-   name: ""
    offset: 0
+   swtch: "NONE"
    curve: 
       type: 1
       value: 40
+   chn: 2
+   flightModes: 000000000
+   name: ""
  -
    mode: 3
    scale: 0
    trimSource: 0
-   srcRaw: Ail
-   chn: 3
-   swtch: "NONE"
-   flightModes: 000000000
+   srcRaw: "Ail"
    weight: 100
-   name: ""
    offset: 0
+   swtch: "NONE"
    curve: 
       type: 1
       value: 45
+   chn: 3
+   flightModes: 000000000
+   name: ""
  -
    mode: 3
    scale: 0
    trimSource: 0
-   srcRaw: P1
-   chn: 4
-   swtch: "NONE"
-   flightModes: 000000000
-   weight: 50
-   name: ""
+   srcRaw: "P2"
+   weight: -50
    offset: 50
+   swtch: "NONE"
    curve: 
       type: 1
       value: 0
+   chn: 4
+   flightModes: 000000000
+   name: ""
+ -
+   mode: 3
+   scale: 0
+   trimSource: 0
+   srcRaw: "SE"
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 0
+   chn: 5
+   flightModes: 000000000
+   name: ""
+ -
+   mode: 3
+   scale: 0
+   trimSource: 0
+   srcRaw: "SA"
+   weight: -100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 0
+   chn: 6
+   flightModes: 000000000
+   name: ""
+ -
+   mode: 3
+   scale: 0
+   trimSource: 0
+   srcRaw: "SB"
+   weight: -100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 0
+   chn: 7
+   flightModes: 000000000
+   name: ""
+ -
+   mode: 3
+   scale: 0
+   trimSource: 0
+   srcRaw: "SF"
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 0
+   chn: 8
+   flightModes: 000000000
+   name: ""
+ -
+   mode: 3
+   scale: 0
+   trimSource: 0
+   srcRaw: "SC"
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 0
+   chn: 9
+   flightModes: 000000000
+   name: ""
+ -
+   mode: 3
+   scale: 0
+   trimSource: 0
+   srcRaw: "MIN"
+   weight: 100
+   offset: 0
+   swtch: "NONE"
+   curve: 
+      type: 1
+      value: 0
+   chn: 10
+   flightModes: 000000000
+   name: ""
 curves: 
    0:
       type: 0
@@ -464,63 +585,72 @@ logicalSw:
    0:
       func: FUNC_VPOS
       def: "tele(13),90"
-      andsw: "!SB0"
+      andsw: "!SA2"
+      lsPersist: 0
+      lsState: 0
       delay: 0
       duration: 0
    1:
       func: FUNC_VNEG
       def: "tele(18),30"
-      andsw: "!SB0"
+      andsw: "!SA2"
+      lsPersist: 0
+      lsState: 0
       delay: 0
       duration: 0
    2:
       func: FUNC_VPOS
       def: "tele(11),480"
-      andsw: "SB1"
+      andsw: "SA1"
+      lsPersist: 0
+      lsState: 0
       delay: 0
       duration: 0
    3:
       func: FUNC_VPOS
       def: "tele(11),550"
-      andsw: "SB1"
+      andsw: "SA1"
+      lsPersist: 0
+      lsState: 0
       delay: 0
       duration: 0
    4:
       func: FUNC_VPOS
       def: "tele(11),620"
-      andsw: "SB1"
+      andsw: "SA1"
+      lsPersist: 0
+      lsState: 0
       delay: 0
       duration: 0
    63:
       func: FUNC_VPOS
       def: "I1,40"
       andsw: "NONE"
+      lsPersist: 0
+      lsState: 0
       delay: 0
       duration: 0
 customFn: 
    0:
       swtch: "SB2"
       func: LOGS
-      def: "5"
+      def: "5,1"
    1:
       swtch: "L1"
       func: PLAY_SOUND
-      def: "Robt,4"
+      def: "Robt,1,4"
    2:
       swtch: "L3"
       func: PLAY_SOUND
-      def: "Rata,4"
+      def: "Rata,1,4"
    3:
       swtch: "L2"
       func: PLAY_SOUND
-      def: "Tada,2"
+      def: "Tada,1,2"
 flightModeData: 
    0:
       trim: 
          0:
-            value: 2
-            mode: 0
-         1:
             value: -2
             mode: 0
       name: ""
@@ -547,7 +677,19 @@ flightModeData:
          8:
             val: 0
 thrTraceSrc: Thr
-switchWarningState: BuCuDu
+switchWarning: 
+   SA:
+      pos: down
+   SB:
+      pos: down
+   SC:
+      pos: up
+   SD:
+      pos: up
+   SE:
+      pos: up
+   SF:
+      pos: up
 rssiSource: none
 rfAlarms: 
    warning: 45
@@ -565,6 +707,9 @@ moduleData:
       mod: 
          crsf: 
             telemetryBaudrate: 0
+            crsfArmingMode: 0
+            crsfArmingTrigger: "NONE"
+            spare3: 0
 inputNames: 
    0:
       val: "Rud"
@@ -575,11 +720,23 @@ inputNames:
    3:
       val: "Ail"
    4:
-      val: "ROL"
-potsWarnEnabled: 1
+      val: "pot"
+   5:
+      val: "sa"
+   6:
+      val: "sb"
+   7:
+      val: "sc"
+   8:
+      val: "sd"
+   9:
+      val: "se"
+potsWarnEnabled: 2
 potsWarnPosition: 
    0:
       val: 62
+   1:
+      val: -64
 telemetrySensors: 
    0:
       id1: 
@@ -1065,6 +1222,10 @@ screens:
                      val: tele(-11)
 view: 0
 modelRegistrationID: "*\x15*\x15!\x03%\x07"
+functionSwitchConfig: 0
+functionSwitchGroup: 0
+functionSwitchStartConfig: 0
+functionSwitchLogicalState: 63
 usbJoystickExtMode: 0
 usbJoystickIfMode: JOYSTICK
 usbJoystickCircularCut: 0
